# travis-gcov-gtest-example

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  main.cpp
.travis/cmake/: CodeCoverage.cmake
googletest-release-1.8.0/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-release-1.8.0/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-release-1.8.0/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: add.h
src/: CMakeLists.txt  add.cpp
test/: CMakeLists.txt  add_numbers.cpp  unit_tests_add.cpp
